--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "devDependencies": {
     "express": "^4.16.3",
     "jssha": "^2.3.1",
-    "sha1": "^1.1.1"
+    "request": "^2.88.0",
+    "sha1": "^1.1.1",
+    "xml2js": "^0.4.19"
   }
 }
